--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 TELEGRAM_TOKEN="7984699052:AAFlaXK2ej_55mFU4JAfR1Fn0hV-ApAieJg"
 GEMINI_API_KEY="AIzaSyBqHUkgoSfczS1KzKkenkxncog1WShnNL8"
+OWNER_ID="1890046858"
